--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##database
-spring.datasource.url=jdbc:mysql://192.168.199.77:3306/xman_test
-spring.datasource.username=xman_dev
-spring.datasource.password=f234567890
+spring.datasource.url=jdbc:mysql://123.207.215.112:3306/niurenpai
+spring.datasource.username=root
+spring.datasource.password=OF5G9UISdls0GKdW
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
@@ -10,3 +10,5 @@ spring.datasource.initial-size=5
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.niurenpai.mapper.model
+
+logging.file=niurenpai.log
