--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 
+server.port=8081
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.niurenpai.mapper.model
 
